--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 <head>
 <style>
 body {
-  background: linear-gradient(to right, red, blue);
+  background-image: url('https://i.imgur.com/yHppGPg.jpeg');
 }
 </style>
 </head>
@@ -116,7 +116,7 @@ body {
 </html>
 
 <body>
-        <video width="100%" height="305%" controls>
+        <video width="100%" height="300%" controls>
         <source src="https://i.imgur.com/WzwJQnJ.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
