--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 <head>
 <style>
 body {
-  background-image: url('https://i.imgur.com/yHppGPg.jpeg');
+  background-image: url('https://i.imgur.com/nS3TOnt.jpeg');
 }
 </style>
 </head>
